--- a/BDK.XrmToolBox/BDK.XrmToolBox.UserAuditViewer/packages.config
+++ b/BDK.XrmToolBox/BDK.XrmToolBox.UserAuditViewer/packages.config
@@ -1,16 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="15.0.5" targetFramework="net462" />
   <package id="DockPanelSuite" version="3.0.6" targetFramework="net462" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.6" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.12" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.12" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.12" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.25" targetFramework="net462" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.24" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.24" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.24" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.42" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.WpfControls" version="9.1.0.42" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.29.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.7" targetFramework="net462" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.21" targetFramework="net462" />
   <package id="Microsoft.Web.Xdt" version="3.0.0" targetFramework="net462" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2019.6.25" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net462" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2020.5.33" targetFramework="net462" />
+  <package id="MxNet.Sharp" version="1.5.1.7" targetFramework="net462" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net462" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net462" />
-  <package id="XrmToolBoxPackage" version="1.2019.6.33" targetFramework="net462" />
+  <package id="NumpyDotNet" version="0.9.42" targetFramework="net462" />
+  <package id="OpenCvSharp4" version="4.3.0.20200405" targetFramework="net462" />
+  <package id="OpenCvSharp4.runtime.win" version="4.3.0.20200405" targetFramework="net462" />
+  <package id="OpenCvSharp4.Windows" version="4.3.0.20200405" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net462" />
+  <package id="XrmToolBoxPackage" version="1.2020.5.39" targetFramework="net462" />
 </packages>
